--- a/l01/index.html
+++ b/l01/index.html
@@ -64,7 +64,7 @@
 <td>
 <img src="hiking.png" width=75%>
 <td>
-<pre>
+<pre class="right">
 그러므로 너희는 가서 모든 민족을 제자로 삼아
 아버지와 아들과 성령의 이름으로 세례를 베풀고
 내가 너희에게 분부한 모든 것을 가르쳐 지키게 하라
@@ -78,7 +78,7 @@
 제자를 삼기 위한 수단으로 세가지의 관계적 명령을 말씀 하시는 것입니다.
 
 <br><br>
-<ol>
+<ol class="fl">
 <p>
 <li> 수평적 관계 <br>
 "그러므로 너희는 가서" &rarr; 모든 사람에게로 나아가야 합니다.</p>
@@ -108,9 +108,9 @@
 <img src="kingdom.png" width=50%>
 <h2>하나님의 나라가 임하옵시며</h2>
 
-<ul type="">
+<ul class="bulb">
 <li> 하나님의 나라란 무엇입니까?
-  <ol>
+  <ol class="fl">
   <li> 하나님의 나라는 영토 개념이 아닙니다. <br>
       즉 교회와 세상을 나누는 공간 개념이 아니라는 말 입니다.
   <li> 하나님의 나라는 주권과 통치의 개념 입니다.
@@ -121,7 +121,7 @@
 
 <br><br>
 <li> 하나님의 나라는 어떻게 임하게 됩니까? (눅 17:20-21)
-   <ol>
+   <ol class="fl">
     <li> 하나님의 나라는 보이지 않습니다
     <li> 하나님의 나라는 공간으로 구분 되지 않습니다.
     <li> 하나님의 나라는 제자들의 삶 속에 임합니다.
@@ -141,7 +141,7 @@
 <script>startpage("")</script>
 <h2>소그룹 나눔</h2>
 
-<ol>
+<ol class="fl">
 <p>
 <li> 나의 삶터: <br>
 각자 자신의 삶터를 소개해 주세요. 대부분의 시간을 보내는 곳은 어디이며,
