--- a/l02/index.html
+++ b/l02/index.html
@@ -88,7 +88,7 @@
 <img src="business.png" width="60%"> <br>
 </center>
 
-<ol>
+<ol class="fl">
 <li> 비즈니스 제국은 일상의 모든 영역을 장악하고 있습니다.
 <li> 비즈니스 제국은 사람을 연결하고, 국가의 경계와 통제를 넘어섭니다.
 <li> 공통의 언어와 가치로, 하나의 문화와 세계관을 갖게 함으로
@@ -107,7 +107,7 @@
 삶을 지배하여 하나님께서 우리를 부르시는 믿음의 삶, 제자의 삶을 뿌리 채 흔들고 위협
 하고 변질 시킵니다.
 
-<ol>
+<ol class="fl">
 <li> 신앙과 삶 분리 합니다.
 <li> 신앙을 삶의 변두리로, 주변화 시킵니다.
 <li> 성공의 우상과 신화를 따르게 하여 하나님을 예배할 수 없게 합니다.
@@ -191,7 +191,7 @@
 
 <h2> 소그룹 나눔 </h2>
 
-<ol>
+<ol class="fl">
 <li> 세속주의: 우리의 삶터에 깊이 들어와 있는 세속주의를 인식하고 있습니까? 나의
 가정 혹은 직장에 가장 큰 영향과 도전을 주는 세속주의적인 생각, 논리와 관행은 무엇입
 니까? 우리는 어떻게 개인적으로 그리고 공동체로 우리 삶터에 들어온 세속주의를 분별
