--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 
 <ol class="fl">
 <h3 style="text-indent:-1em">일상에서</h3><br>
-<li> <a href="l01/index.html"> 삶터의 제자도 </a>
-<li> <a href="l02/index.html"> 세상속의 삶터 </a>
-<li> <a href="l02/index.html"> 일과 소명 </a>
-<li> 일과 안식
+<li> <a href="l01/index.html">삶터의 제자도</a>
+<li> <a href="l02/index.html">세상속의 삶터</a>
+<li> <a href="l03/index.html">일과 소명</a>
+<li> <a href="l04/index.html">일과 안식</a>
 <li> 하나님이 다스리시는 가정</li>
 
 <br><br>
