--- a/l01/index.html
+++ b/l01/index.html
@@ -20,8 +20,8 @@
 삶터란, 사람들이 세상 속에서 살아가는 삶의 현장을 말합니다.
 사람들은 자신의 삶터에서 대부분의 시간을 보내며, 수고하고
 일하며, 다른 사람들을 만나는 등, 그들의 일상을 살아갑니다.
-마찬가지로 그리스도인들도 세상 속에서 일상을 살아가는 자신
-의 삶터가 있습니다.
+마찬가지로 그리스도인들도 세상 속에서 일상을 살아가는 자신의
+삶터가 있습니다.
 
 <br><br>
 당신의 삶터는 어디입니까? 당신은 그곳에서 어떤 모습으로 일상을 살아가고 있나요?
@@ -37,15 +37,18 @@
 
 <p>
 심지어 삶터에서 경험하는 많은 어려움과 고통스러운 일들, 또한 돈과 성공과 명예 등
-삶터에서 벌어지는 온갖 유혹 때문에 신앙을 공격 받는다고 느끼기 때문에, 오히려 믿음
-을 지키기 위해서는 머물기를 최소화하고 또 가능한 피해야 할 공간이 삶터 라고 생각
+삶터에서 벌어지는 온갖 유혹 때문에 신앙을 공격 받는다고 느끼기 때문에, 오히려 믿음을
+지키기 위해서는 머물기를 최소화하고 또 가능한 피해야 할 공간이 삶터 라고 생각
 하기도 합니다.</p>
 
 <p>
 물론 자신의 삶터에서 믿음을 실천하기 위해 최선을 다해 노력하는 그리스도인들도
-있습니다. 하지만 현실적으로 직면하는 삶터의 커다란 실재 앞에 쉽게 무너지고 포기
-하게 되는 경우들을 보게 됩니다. 그래서 많은 그리스도인들이 자신의 신앙 생활과 삶터
+있습니다. 하지만 현실적으로 직면하는 삶터의 커다란 실재 앞에 쉽게 무너지고 포기하게
+되는 경우들을 보게 됩니다. 그래서 많은 그리스도인들이 자신의 신앙 생활과 삶터
 에서의 삶이 분리된 채 살아가게 되는 것입니다.
+</p>
+
+<p>
 이 글을 읽는 당신에게 질문 드립니다. 당신의 삶터에서 믿음은 일상과 어떻게 연결
 되어 있습니까?</p>
 
@@ -112,7 +115,7 @@
 <li> 하나님의 나라란 무엇입니까?
   <ol class="fl">
   <li> 하나님의 나라는 영토 개념이 아닙니다. <br>
-      즉 교회와 세상을 나누는 공간 개념이 아니라는 말 입니다.
+      즉 교회와 세상을 나누는 공간 개념이 아니라는 말입니다.
   <li> 하나님의 나라는 주권과 통치의 개념 입니다.
 
   <li> 살아가는 삶의 현장에서 보이지 않는 하나님을 인식하는 것이야 말로,
