--- a/l02/index.html
+++ b/l02/index.html
@@ -18,14 +18,14 @@
 <td width="5%">&emsp;
 <td>
 우리의 삶터는 세상의 한가운데 있으며 우리는 그 곳에서
-세상을 만납니다. 하지만 우리가 사는 세상은 중립지대가 아닙
-니다. 우리가 사는 세상은 이미 깊은 어두움 속에 있으며 우리
-는 그 어두움을 우리의 삶터에서 매 순간 직면하게 됩니다.
+세상을 만납니다. 하지만 우리가 사는 세상은 중립지대가 아닙니다.
+우리가 사는 세상은 이미 깊은 어두움 속에 있으며 우리는
+그 어두움을 우리의 삶터에서 매 순간 직면하게 됩니다.
 </table>
 
 이 어두움의 근원은 인간의 죄이며 (로마서 3:23), 다양한
-범죄 행위로 나타나지만 (창세기 4:8) 가장 보편적으로 나타나
-는 모습은 세속주의(secularism)입니다 (창세기 11:4).
+범죄 행위로 나타나지만 (창세기 4:8) 가장 보편적으로 나타나는
+모습은 세속주의(secularism)입니다 (창세기 11:4).
 
 <div class="right">
 <pre>
@@ -101,11 +101,11 @@
 <script>startpage("")</script>
 <h2>세속주의의 도전</h2>
 
-세속주의는 애매하며 겉으로 잘 드러나지 않습니다. 왜냐하면 세속주의와 관련된 대부
-분의 행위가 그 자체는 죄가 아니며 오히려 하나님께서 선하게 창조하신 세상에 기초
-하고 있기 때문입니다. 그러나 그것에 우리의 시선을 고정 할 때에 세속주의는 우리의
-삶을 지배하여 하나님께서 우리를 부르시는 믿음의 삶, 제자의 삶을 뿌리 채 흔들고 위협
-하고 변질 시킵니다.
+세속주의는 애매하며 겉으로 잘 드러나지 않습니다. 왜냐하면 세속주의와 관련된 대부분의
+행위가 그 자체는 죄가 아니며 오히려 하나님께서 선하게 창조하신 세상에 기초하고
+있기 때문입니다. 그러나 그것에 우리의 시선을 고정 할 때에 세속주의는 우리의
+삶을 지배하여 하나님께서 우리를 부르시는 믿음의 삶, 제자의 삶을 뿌리 채 흔들고 위협하고
+변질시킵니다.
 
 <ol class="fl">
 <li> 신앙과 삶 분리 합니다.
@@ -118,14 +118,14 @@
 </ol>
 
 당신은 지금 현대 사회에서 여러가지 모습으로 우리 삶터속에 들어와 있는 세속주의와
-(과학주의, 성과주의, 물질주의, 권력주의, 율법주의, 소비주의, 성공주의 등) 그 영향력
-을 인식하고 있습니까?
+(과학주의, 성과주의, 물질주의, 권력주의, 율법주의, 소비주의, 성공주의 등) 그 영향력을
+인식하고 있습니까?
 
 <h2>해결책: 하나님 나라의 복음</h2>
 
 세속주의의 영향력은 너무나 어둡고 강력하여 어떤 노력으로도 이길 수 없어 보입니다.
-그러나 빛이 오면 어두움이 사라지는 것과 같이, 세속주의의 어두움은 세상에 오신 참 빛
-되신 예수 그리스도께서 비추실 때 사라집니다. 복음은 세속주의를 넉넉히 이기고 삶터
+그러나 빛이 오면 어두움이 사라지는 것과 같이, 세속주의의 어두움은 세상에 오신 참 빛되신
+예수 그리스도께서 비추실 때 사라집니다. 복음은 세속주의를 넉넉히 이기고 삶터
 에서 하나님 나라를 구하며 믿음으로 살아가게 하는 능력이 됩니다.
 
 <div class=right>
@@ -167,12 +167,12 @@
 </div>
 
 <h2> 삶터에 임하는 하나님 나라 </h2>
-삶터에 하나님의 나라가 임한다는 것은 삶터에서 보다 종교적인 행위들, 예를들어, 예배
-의식, 기도모임, 성경공부, 전도, 헌금, 등을 더하거나 대체하는 것을 의미하지 않습니다.
+삶터에 하나님의 나라가 임한다는 것은 삶터에서 보다 종교적인 행위들, 예를들어, 예배의식,
+기도모임, 성경공부, 전도, 헌금, 등을 더하거나 대체하는 것을 의미하지 않습니다.
 
 <p>
-우리가 삶터에 임하는 목적과 행하는 활동 자체가 하나님의 말씀에 기초하게 하여 하나
-님의 다스림과 주권이 우리의 삶터 속에서 회복되는 것을 의미합니다. 즉, 하나님께서
+우리가 삶터에 임하는 목적과 행하는 활동 자체가 하나님의 말씀에 기초하게 하여 하나님의
+다스림과 주권이 우리의 삶터 속에서 회복되는 것을 의미합니다. 즉, 하나님께서
 다스리시는 거룩한 영적인 영역과 내가 다스리며 조절 하던 일상의 영역이 다른 영역이
 아님을 인정하고 <u>성속(聖俗)의 벽을 허무는 것</u>입니다.
 </p>
@@ -181,8 +181,8 @@
 <script>endpage()</script>
 
 <script>startpage("")</script>
-예수님께서도 하나님 나라를 비유하실 때, 모두 우리의 일상, 삶터를 비유로 말씀하셨습
-니다. 이것은 우리가 얼마든지 우리의 일상 가운데 하나님의 나라, 즉 하나님의 다스림과
+예수님께서도 하나님 나라를 비유하실 때, 모두 우리의 일상, 삶터를 비유로 말씀하셨습니다.
+이것은 우리가 얼마든지 우리의 일상 가운데 하나님의 나라, 즉 하나님의 다스림과
 주권을 경험할 수 있음을 증명 합니다.
 
 <p>
@@ -193,12 +193,12 @@
 
 <ol class="fl">
 <li> 세속주의: 우리의 삶터에 깊이 들어와 있는 세속주의를 인식하고 있습니까? 나의
-가정 혹은 직장에 가장 큰 영향과 도전을 주는 세속주의적인 생각, 논리와 관행은 무엇입
-니까? 우리는 어떻게 개인적으로 그리고 공동체로 우리 삶터에 들어온 세속주의를 분별
-하고 극복할 수 있을까요?
+가정 혹은 직장에 가장 큰 영향과 도전을 주는 세속주의적인 생각, 논리와 관행은 무엇입니까?
+우리는 어떻게 개인적으로 그리고 공동체로 우리 삶터에 들어온 세속주의를 분별하고
+극복할 수 있을까요?
 
 <li>
-  삶의 변화: 세속주의를 이기는 하나님 나라의 복음을 이해 하셨습니까? 일상의 삶과
+삶의 변화: 세속주의를 이기는 하나님 나라의 복음을 이해 하셨습니까? 일상의 삶과
 신앙 생활을 구분하는 마음의 벽은 무엇입니까? 삶터의 모든 영역이 하나님의 말씀으로
 다스리심을 받기 위하여 당신이 변화되어야 할 삶의 목적과 방식은 무엇입니까?
 </ol>
