--- a/l03/index.html
+++ b/l03/index.html
@@ -18,17 +18,17 @@
 <td width="5%">&emsp;
 <td>
   우리의 일상에는 늘 많은 일을 하며 살아갑니다. 그리고 우리가
-하는 일에는 늘 과제들이 있습니다. 그것은, 일 자체에서 오는 피
-로와 관계의 갈등 그리고 성과에 따라 결정되는 사회 구조 등의
+하는 일에는 늘 과제들이 있습니다. 그것은, 일 자체에서 오는 피로와
+관계의 갈등 그리고 성과에 따라 결정되는 사회 구조 등의
 어려움 입니다. 문제는 이러한 일을 하며 겪는 갈등과 어려움은
 계속해서 또 다른 문제를 지속적으로 만들어 낸다는 것입니다.
 </table>
 
 그렇다면, 어떻게 우리는 일상의 과제를 해결할 수 있을까요? 그것은 일에 대한 관점의
 변화를 통해 가능합니다. 즉, 일을 하며 겪는 문제를 해결하여 아무런 고민과 어려움이
-없는 상태로 만드는 것이 아니라, (사실,불가능 합니다) 우리에게 주어진 일을 어떤 관점
-으로 해석할 것인가? 질문하며 그 답을 얻는 것입니다. 지금, 여러분은 여러분에게 주어
-진 일상의 일을 어떤 관점으로 바라보고 있습니까?
+없는 상태로 만드는 것이 아니라, (사실,불가능 합니다) 우리에게 주어진 일을 어떤
+관점으로 해석할 것인가? 질문하며 그 답을 얻는 것입니다. 지금, 여러분은 여러분에게 주어진
+일상의 일을 어떤 관점으로 바라보고 있습니까?
 
 
 <script>nextsection('<img src="sec1.png" width=75%>')</script>
@@ -37,8 +37,8 @@
 <h3><span class="fancy">1</span> 신앙을 갖고 살아가는 것입니다.</h3>
 
 <p>
-  신앙을 갖고 산다는 것은, 하나님과 내가 하나 되는 삶을 산다는 것입니다. 우리의 신앙
-은 반드시 두가지 방향으로 표출되어야 합니다.
+신앙을 갖고 산다는 것은, 하나님과 내가 하나 되는 삶을 산다는 것입니다. 우리의 신앙은
+반드시 두가지 방향으로 표출되어야 합니다.
 </p>
 <center><img src="reveal.png" width="80%"></center>
 
@@ -62,8 +62,8 @@
 <!-- page -->
 <script>startpage('')</script>
 거듭난 신앙 생활을 한다고 하면서, 언어와 성격이 바뀌지 않는다면, 참 신앙인 이라 할
-수 없습니다. 믿음은 성품과 행동의 변화를 반드시 동반합니다. 물론, '착한 행실’이 구원
-의 조건이 될 수는 없지만, 그것을 통해 하나님께서 영광받으시는 것은 틀림 없습니다.
+수 없습니다. 믿음은 성품과 행동의 변화를 반드시 동반합니다. 물론, '착한 행실’이 구원의
+조건이 될 수는 없지만, 그것을 통해 하나님께서 영광받으시는 것은 틀림 없습니다.
 
 <pre class="right">
 이같이 너희 빛이 사람 앞에 비치게 하여 그들로 너희 착한 행실을 보고
@@ -90,21 +90,21 @@
 <h2>일의 신학 </h2>
 
 우리의 일과 또 우리가 속한 장소에서 영성을 극대화 시켜 살아가기 위해서는, '어떤
-관점으로 일을 해야 하는가?', '우리는 왜 일을 해야하는가?', '성경은 일에 대하여 어떻
-게 정의하는가?' 에 대한 지식이 필요합니다. 이러한 일에 관한 성경적 관점을 종합한
+관점으로 일을 해야 하는가?', '우리는 왜 일을 해야하는가?', '성경은 일에 대하여 어떻게
+정의하는가?' 에 대한 지식이 필요합니다. 이러한 일에 관한 성경적 관점을 종합한
 것을 '일의 신학' 이라고 합니다.
 
 <p>
 감사한것은, 우리 손에 쥐어진 성경은 우리의 일상과 동떨어진 내용을 기록하지 않고,
-우리의 일상에서 일어나는 내용을 담고 있습니다. 특별히 성경은 창세기 부터 계시록
-까지 일에 관한 일관 된 주제를 전달합니다. 그것은 하나님은 '일 하시는 하나님' 이라는
+우리의 일상에서 일어나는 내용을 담고 있습니다. 특별히 성경은 창세기 부터 계시록까지
+일에 관한 일관 된 주제를 전달합니다. 그것은 하나님은 '일 하시는 하나님' 이라는
 것입니다. 성경은 하나님의 일 하시는 내용으로 가득차 있습니다. 또한 우리로 하여금
 일 하는 것에 중요한 가치를 두고 살도록 교훈 합니다.
 </p>
 
 <p>
-그러므로 그리스도인은 모든 주어진 일 속에서 영성을 갖고 영적인 일을 추구해야 합니
-다. 이것은 그리스도인에게 주어진 '소명' 이기도 합니다. 그러나, 안타깝게도 우리는
+그러므로 그리스도인은 모든 주어진 일 속에서 영성을 갖고 영적인 일을 추구해야 합니다.
+이것은 그리스도인에게 주어진 '소명' 이기도 합니다. 그러나, 안타깝게도 우리는
 일에 대한 왜곡 된 시각을 갖고 있습니다.
 </p>
 
