--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <br><br>
 
 <h3 style="text-indent:-1em">제자로</h3><br>
-<li> 삶터의 청지기
+<li> <a href="l06/index.html">삶터의 청지기</a>
 <li> 삶터의 제사장
 <li> 세상 속 제자도
 </ol>
