--- a/l03/index.html
+++ b/l03/index.html
@@ -131,7 +131,7 @@
 </ul>
 <br><br><br>
 <script>endpage()</script>
-<script>startpage("")</script>
+<script>startpage('<img src="cycle.png" width="75%"')</script>
 
 <ul type="none">
 <li>
@@ -210,6 +210,6 @@
 <li> 내가 하는 일에 대하여 일의 신학의 관점에서 해석해 보세요.
 </ol>
 
-<span style="height:20em">&emsp;</span>
+<div  style="height:14em">&emsp;</div>
 </body>
 </html>
