--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <h3 style="text-indent:-1em">제자로</h3><br>
 <li> <a href="l06/index.html">삶터의 청지기</a>
-<li> 삶터의 제사장
+<li> <a href="l07/index.html">삶터의 제사장</a>
 </ol>
 
 <div style="height:20em"></div>
