--- a/index.html
+++ b/index.html
@@ -8,12 +8,22 @@
 <body>
 
 <!--- page -->
-<script>startpage("")</script>
+<script>startsection("","")</script>
 
-<h1>Contents</h1>
+
+<div style="height:3em"></div>
+
+
+<font size=7><b>삶터사역 기초과정</b></font>
+
+<div style="height:5em"></div>
+
+<h2>Contents</h2>
+
+<div style="height:2em"></div>
 
 <ol class="fl">
-<h3 style="text-indent:-1em">일상에서</h3><br>
+<h3 style="text-indent:-1em"><font size=4>일상에서</font></h3><br>
 <li> <a href="l01/index.html">삶터의 제자도</a>
 <li> <a href="l02/index.html">세상속의 삶터</a>
 <li> <a href="l03/index.html">일과 소명</a>
@@ -22,12 +32,12 @@
 
 <br><br>
 
-<h3 style="text-indent:-1em">제자로</h3><br>
+<h3 style="text-indent:-1em"><font size=4>제자로</font></h3><br>
 <li> <a href="l06/index.html">삶터의 청지기</a>
 <li> <a href="l07/index.html">삶터의 제사장</a>
 </ol>
 
-<div style="height:20em"></div>
+<div style="height:12em"></div>
 <script>endpage()</script>
 
 </body>
