--- a/l01/index.html
+++ b/l01/index.html
@@ -28,6 +28,76 @@
 누구를 만나 시간을 보내며, 어떤 마음, 어떤 모습으로 일상을 살아가고 있나요?
 </table>
 
+<script>nextsection('')</script>
+<h2>삶터는 하나님의 디자인</h2>
+
+<ol class="fl">
+  <li> <b>사람을 지으신 목적</b>:
+    하나님께서는 온 세상을 선하게 창조하셨으며 (창세기1:1,  창세기 1:31, 디모데후서 4:4),
+    자신의 형상대로 사람을 만드셔서 창조된 모든 세상을 주셔서 다스리게 하셨습니다.
+
+  <pre class="right">
+    하나님이 이르시되 우리의 형상을 따라 우리의 모양대로 우리가 사람을 만들고
+    그들로 바다의 물고기와 하늘의 새와 가축과 온 땅과 땅에 기는 모든 것을 다스리게
+    하자 하시고, 하나님이 자기 형상 곧 하나님의 형상대로 사람을 창조하시되
+    남자와 여자를 창조하시고 하나님이 그들에게 복을 주시며 하나님이 그들에게 이르시되
+    생육하고 번성하여 땅에 충만하라, 땅을 정복하라, 바다의 물고기와 하늘의 새와 땅에
+    움직이는 모든 생물을 다스리라 하시니라
+    창세기 1:18-21
+  </pre>
+
+  <li> <b>삶터</b>:
+    하나님께서는 온 세상 중에서 에덴이라는 특정한 시간과 공간,
+    즉 삶터를 창조하셔서 그 곳에서 두시고 삶터를 다스리게 하셨습니다.
+
+<pre class="right">
+  여호와 하나님이 동방의 에덴에 동산을 창설하시고 그 지으신 사람을 거기 두시니라
+  창세기 2:8-9
+</pre>
+
+<li> <b>일 (work)</b>: 하나님이 창조하신 삶터의 첫번째 사명은 일, 노동이었으며,
+  일을 통하여 삶터를 다스리며 하나님을 예배하게 하셨습니다.
+  하나님께서 삶터에 주신 첫번째 삶의 터전은 일터입니다.
+
+<pre class="right">
+  여호와 하나님이 그 사람을 이끌어 에덴 동산에 두어 그것을 경작하며 지키게 하시고
+  창세기 2:15
+</pre>
+</ol>
+<br><br>
+<script>endpage()</script>
+
+<script>startpage("")</script>
+<ol class="fl" style="counter-reset: ol-item 3">
+<li> <b>가정 (family)</b>:
+  하나님께서는 동시에 가정을 창조하셔서 남자와 여자의 온전한 연합과 안식 가운데
+  (창세기 1:22-25) 생육하고 번성하게 하셨습니다.
+  가정은 삶터를 이루는 또 하나의 삶의 터전입니다.
+
+
+<pre class="right">
+  여호와 하나님이 이르시되 사람이 혼자 사는 것이 좋지 아니하니
+  내가 그를 위하여 돕는 배필을 지으리라 하시니라
+  창세기 2:18
+</pre>
+
+<li> <b>믿음 (faith)</b>: 하나님께서는 일터와 가정에서 우리가 자유를 누리며
+  살지만 동시에 하나님의 말씀을 따라 순종하는 믿음의 삶을 살도록 디자인하셨습니다.
+
+<pre class="right">
+  여호와 하나님이 그 사람에게 명하여 가라사대 동산 각종 나무의 실과는 네가 임의로 먹되
+선악을 알게 하는 나무의 실과는 먹지 말라 네가 먹는 날에는 정녕 죽으리라 하시니라
+창세기 2:16-17
+</pre>
+
+</ol>
+
+우리의 삶터, 일터와 가정은 하나님의 백성들이 하나님의 형상을 따라 믿음 안에서
+이 세상을 다스리기 위하여 하나님이 직접 고안하고 맡겨 주셨습니다. 우리의 삶터는
+신앙의 사각지대가 아니라 하나님께서 창조하신 이 땅에 하나님의 나라를 건설하는
+가장 보편적인 통로입니다.
+
+
 
 <script>nextsection('<img src="tree.png" width=40%>')</script>
 <h2> 삶터와 믿음 </h2>
@@ -52,7 +122,7 @@
 이 글을 읽는 당신에게 질문 드립니다. 당신의 삶터에서 믿음은 일상과 어떻게 연결
 되어 있습니까?</p>
 
-
+<div style="height: 10em"></div>
 <script>endpage()</script>
 
 
@@ -100,8 +170,7 @@
 행하도록’ 책임지는 것을 동반 합니다. 다시 말하면 그리스도의 말씀으로 사는 제자를
 만드는 것입니다.</p>
 
-<br><br><br>
-
+<div style="height:15em"></div>
 <script>endpage()</script>
 
 
@@ -128,7 +197,6 @@
     <li> 하나님의 나라는 보이지 않습니다
     <li> 하나님의 나라는 공간으로 구분 되지 않습니다.
     <li> 하나님의 나라는 제자들의 삶 속에 임합니다.
-   <li> 하나님 나라의 비밀 : '이미' 와 '아직' (Already but not yet 의 긴장)
 </ul>
 
 <h2> 삶터 사역의 비전 </h2>
@@ -139,7 +207,8 @@
 모든 사람이 참된 제자가 되어 하나님의 나라가 가정과 일터와
 세상 그리고 교회 가운데 임하도록 하는 것입니다.
 </table>
-<br><br><br><br>
+
+<div style="height:15em"></div>
 <script>endpage()</script>
 <script>startpage("")</script>
 <h2>소그룹 나눔</h2>
@@ -158,7 +227,9 @@
 모습을 나누어 주세요. 그리고 “아직” 임하지 않은 그러나 앞으로 임하기를
 소망하는 하나님 나라의 모습을 기도 제목으로 나누어 주세요.
 </ol>
-<br><br><br><br>
+
+<div style="height:40em"></div>
+
 <script>endpage()</script>
 </body>
 </html>
