--- a/l01/index.html
+++ b/l01/index.html
@@ -201,14 +201,14 @@
 
 <h2> 삶터 사역의 비전 </h2>
 <table class="noborder">
-<td> <img src="telescope.png" width="100%">
+<td style="width:20%"> <img src="telescope.png" width="100%">
 <td>
 삶터 사역의 비전은 삶의 현장에서 그리스도의 제자로 삶으로
 모든 사람이 참된 제자가 되어 하나님의 나라가 가정과 일터와
 세상 그리고 교회 가운데 임하도록 하는 것입니다.
 </table>
 
-<div style="height:15em"></div>
+<div style="height:13em"></div>
 <script>endpage()</script>
 <script>startpage("")</script>
 <h2>소그룹 나눔</h2>
@@ -221,14 +221,14 @@
 
 <p>
 
-<li> 삶터의 비전: <br>
-삶터 사역을 시작하는 각자의 소망과 비전을 나누어 봅시다.
-예수님을 알고 나서 여러분 삶터에 일어난 변화, 즉 “이미” 임한 하나님 나라의
-모습을 나누어 주세요. 그리고 “아직” 임하지 않은 그러나 앞으로 임하기를
-소망하는 하나님 나라의 모습을 기도 제목으로 나누어 주세요.
+<li> 삶터의 비전과 소망: <br>
+삶터를 향하신 하나님의 본래적인 목적과 계획이 무엇인지 생각해 보고,
+지금 자신의 삶터가 얼마나 그 본 목적을 잘 수행하고 있는지,
+혹은 회복되어야 할 부분은 무엇인지 생각해 봅시다.
+그리고 자신의 삶터를 향한 비전과 소망을 나누어 봅시다.
 </ol>
 
-<div style="height:40em"></div>
+<div style="height:45em"></div>
 
 <script>endpage()</script>
 </body>
