--- a/l01/index.html
+++ b/l01/index.html
@@ -64,8 +64,7 @@
   창세기 2:15
 </pre>
 </ol>
-<br><br>
-<script>endpage()</script>
+<script>endpage2("2em")</script>
 
 <script>startpage("")</script>
 <ol class="fl" style="counter-reset: ol-item 3">
@@ -122,8 +121,7 @@
 이 글을 읽는 당신에게 질문 드립니다. 당신의 삶터에서 믿음은 일상과 어떻게 연결
 되어 있습니까?</p>
 
-<div style="height: 10em"></div>
-<script>endpage()</script>
+<script>endpage2("10em")</script>
 
 
 
@@ -170,8 +168,7 @@
 행하도록’ 책임지는 것을 동반 합니다. 다시 말하면 그리스도의 말씀으로 사는 제자를
 만드는 것입니다.</p>
 
-<div style="height:15em"></div>
-<script>endpage()</script>
+<script>endpage2("15em")</script>
 
 
 
@@ -208,8 +205,7 @@
 세상 그리고 교회 가운데 임하도록 하는 것입니다.
 </table>
 
-<div style="height:13em"></div>
-<script>endpage()</script>
+<script>endpage2("13em")</script>
 <script>startpage("")</script>
 <h2>소그룹 나눔</h2>
 
@@ -228,8 +224,6 @@
 그리고 자신의 삶터를 향한 비전과 소망을 나누어 봅시다.
 </ol>
 
-<div style="height:45em"></div>
-
-<script>endpage()</script>
+<script>endpage2("45em")</script>
 </body>
 </html>
