--- a/l01/index.html
+++ b/l01/index.html
@@ -37,13 +37,16 @@
     자신의 형상대로 사람을 만드셔서 창조된 모든 세상을 주셔서 다스리게 하셨습니다.
 
   <pre class="right">
-    하나님이 이르시되 우리의 형상을 따라 우리의 모양대로 우리가 사람을 만들고
-    그들로 바다의 물고기와 하늘의 새와 가축과 온 땅과 땅에 기는 모든 것을 다스리게
-    하자 하시고, 하나님이 자기 형상 곧 하나님의 형상대로 사람을 창조하시되
-    남자와 여자를 창조하시고 하나님이 그들에게 복을 주시며 하나님이 그들에게 이르시되
-    생육하고 번성하여 땅에 충만하라, 땅을 정복하라, 바다의 물고기와 하늘의 새와 땅에
-    움직이는 모든 생물을 다스리라 하시니라
-    창세기 1:18-21
+하나님이 이르시되 우리의 형상을 따라 우리의 모양대로
+우리가 사람을 만들고 그들로 바다의 물고기와 하늘의
+새와 가축과 온 땅과 땅에 기는 모든 것을 다스리게 하자
+하시고, 하나님이 자기 형상 곧 하나님의 형상대로 사람을
+창조하시되 남자와 여자를 창조하시고
+하나님이 그들에게 복을 주시며 하나님이 그들에게 이르시되
+생육하고 번성하여 땅에 충만하라, 땅을 정복하라,
+바다의 물고기와 하늘의 새와 땅에 움직이는 모든 생물을
+다스리라 하시니라
+창세기 1:18-21
   </pre>
 
   <li> <b>삶터</b>:
@@ -51,8 +54,9 @@
     즉 삶터를 창조하셔서 그 곳에서 두시고 삶터를 다스리게 하셨습니다.
 
 <pre class="right">
-  여호와 하나님이 동방의 에덴에 동산을 창설하시고 그 지으신 사람을 거기 두시니라
-  창세기 2:8-9
+여호와 하나님이 동방의 에덴에 동산을 창설하시고
+그 지으신 사람을 거기 두시니라
+창세기 2:8-9
 </pre>
 
 <li> <b>일 (work)</b>: 하나님이 창조하신 삶터의 첫번째 사명은 일, 노동이었으며,
@@ -60,11 +64,12 @@
   하나님께서 삶터에 주신 첫번째 삶의 터전은 일터입니다.
 
 <pre class="right">
-  여호와 하나님이 그 사람을 이끌어 에덴 동산에 두어 그것을 경작하며 지키게 하시고
-  창세기 2:15
+여호와 하나님이 그 사람을 이끌어 에덴 동산에 두어
+그것을 경작하며 지키게 하시고
+창세기 2:15
 </pre>
 </ol>
-<script>endpage2("2em")</script>
+<script>endpage2("0.5em")</script>
 
 <script>startpage("")</script>
 <ol class="fl" style="counter-reset: ol-item 3">
@@ -75,17 +80,19 @@
 
 
 <pre class="right">
-  여호와 하나님이 이르시되 사람이 혼자 사는 것이 좋지 아니하니
-  내가 그를 위하여 돕는 배필을 지으리라 하시니라
-  창세기 2:18
+여호와 하나님이 이르시되 사람이 혼자 사는 것이 좋지 아니하니
+내가 그를 위하여 돕는 배필을 지으리라 하시니라
+창세기 2:18
 </pre>
 
 <li> <b>믿음 (faith)</b>: 하나님께서는 일터와 가정에서 우리가 자유를 누리며
   살지만 동시에 하나님의 말씀을 따라 순종하는 믿음의 삶을 살도록 디자인하셨습니다.
 
 <pre class="right">
-  여호와 하나님이 그 사람에게 명하여 가라사대 동산 각종 나무의 실과는 네가 임의로 먹되
-선악을 알게 하는 나무의 실과는 먹지 말라 네가 먹는 날에는 정녕 죽으리라 하시니라
+여호와 하나님이 그 사람에게 명하여 가라사대 동산
+각종 나무의 실과는 네가 임의로 먹되
+선악을 알게 하는 나무의 실과는 먹지 말라
+네가 먹는 날에는 정녕 죽으리라 하시니라
 창세기 2:16-17
 </pre>
 
@@ -139,7 +146,8 @@
 그러므로 너희는 가서 모든 민족을 제자로 삼아
 아버지와 아들과 성령의 이름으로 세례를 베풀고
 내가 너희에게 분부한 모든 것을 가르쳐 지키게 하라
-볼지어다 내가 세상 끝날까지 너희와 항상 함께 있으리라 하시니라
+볼지어다 내가 세상 끝날까지
+너희와 항상 함께 있으리라 하시니라
 - 마태복음 28:19-20, 개역개정
 </pre>
 </table>
