--- a/l01/index.html
+++ b/l01/index.html
@@ -138,7 +138,7 @@
 
 <h2>제자도의 본질 (대위임령)</h2>
 
-<table class="noborder">
+<table class="noborder" width=100%>
 <td>
 <img src="hiking.png" width=75%>
 <td>
