--- a/l02/index.html
+++ b/l02/index.html
@@ -27,12 +27,11 @@
 범죄 행위로 나타나지만 (창세기 4:8) 가장 보편적으로 나타나는
 모습은 세속주의(secularism)입니다 (창세기 11:4).
 
-<div class="right">
-<pre>
+<pre class="right">
 또 말하되 자, 성읍과 탑을 건설하여 그 탑 꼭대기를 하늘에 닿게 하여
 우리 이름을 내고 온 지면에 흩어짐을 면하자 하였더니
 - 창세기 11:4, 개역개정</pre>
-</div>
+
 
 <script>nextsection('<img src="flag.png" width=40%>')</script>
 <h2>삶의 3가지 형태 </h2>
@@ -52,9 +51,10 @@
 <br><br>
 <li> 신본주의: 보이지 않는 영원한 것을 주목하고 그 관점에서 보이는 것을 다스리며,
 하나님 중심으로 사는 삶.
-  <ul>
+
+ <ul style="list-style-image:none">
   <li> 성경속에 나타나는 신본주의 (믿음의 삶)
-    <pre>
+    <pre class="right">
     아브람이 여호와를 믿으니 여호와께서 이를 그의 의로 여기시고
     (창세기 15:6, 개역개정)
     </pre>
@@ -155,13 +155,14 @@
 
 <div class="right">
 <pre>
-싹이 나고 결실할 때에 가라지도 보이거늘 집 주인의 종들이 와서 말하되
-주여 밭에 좋은 씨를 뿌리지 아니하였나이까 그런데 가라지가 어디서 생겼나이까
-주인이 이르되 원수가 이렇게 하였구나 종들이 말하되
-그러면 우리가 가서 이것을 뽑기를 원하시나이까 주인이 이르되 가만 두라
-가라지를 뽑다가 곡식까지 뽑을까 염려하노라 둘 다 추수 때까지 함께 자라게 두라
-추수 때에 내가 추수꾼들에게 말하기를 가라지는 먼저 거두어 불사르게 단으로 묶고
-곡식은 모아 내 곳간에 넣으라 하리라
+싹이 나고 결실할 때에 가라지도 보이거늘 집 주인의 종들이 와서
+말하되 주여 밭에 좋은 씨를 뿌리지 아니하였나이까 그런데
+가라지가 어디서 생겼나이까 주인이 이르되 원수가 이렇게
+하였구나 종들이 말하되 그러면 우리가 가서 이것을 뽑기를
+원하시나이까 주인이 이르되 가만 두라 가라지를 뽑다가
+곡식까지 뽑을까 염려하노라 둘 다 추수 때까지 함께 자라게 두라
+추수 때에 내가 추수꾼들에게 말하기를 가라지는 먼저 거두어
+불사르게 단으로 묶고 곡식은 모아 내 곳간에 넣으라 하리라
 - 마태복음 13:26-30, 개역개정
 </pre>
 </div>
@@ -176,9 +177,7 @@
 다스리시는 거룩한 영적인 영역과 내가 다스리며 조절 하던 일상의 영역이 다른 영역이
 아님을 인정하고 <u>성속(聖俗)의 벽을 허무는 것</u>입니다.
 </p>
-<br><br><br><br>
-
-<script>endpage()</script>
+<script>endpage2("4em")</script>
 
 <script>startpage("")</script>
 예수님께서도 하나님 나라를 비유하실 때, 모두 우리의 일상, 삶터를 비유로 말씀하셨습니다.
