--- a/l02/index.html
+++ b/l02/index.html
@@ -55,8 +55,8 @@
  <ul style="list-style-image:none">
   <li> 성경속에 나타나는 신본주의 (믿음의 삶)
     <pre class="right">
-    아브람이 여호와를 믿으니 여호와께서 이를 그의 의로 여기시고
-    (창세기 15:6, 개역개정)
+아브람이 여호와를 믿으니 여호와께서 이를 그의 의로 여기시고
+- 창세기 15:6, 개역개정
     </pre>
   </ul>
 </ul>
