--- a/l02/index.html
+++ b/l02/index.html
@@ -61,7 +61,7 @@
   </ul>
 </ul>
 
-<script>endpage()</script>
+<script>endpage2("10em")</script>
 
 
 
@@ -134,8 +134,6 @@
 - 요한복음 1:9, 개역개정</pre>
 </div>
 
-<script>endpage()</script>
-<script>startpage("")</script>
 
 <p>
 또한 복음은 우리의 삶터에 이루어질 하나님의 나라를 믿고 소망하며 그 소망 안에서
@@ -151,11 +149,13 @@
 </div>
 
 
+
+<script>endpage2("10em")</script>
+<script>startpage("")</script>
+
 <h2> 삶터의 현실: 이미 그러나 아직</h2>
 
-<div class="right">
-<pre>
-싹이 나고 결실할 때에 가라지도 보이거늘 집 주인의 종들이 와서
+<pre class="right">싹이 나고 결실할 때에 가라지도 보이거늘 집 주인의 종들이 와서
 말하되 주여 밭에 좋은 씨를 뿌리지 아니하였나이까 그런데
 가라지가 어디서 생겼나이까 주인이 이르되 원수가 이렇게
 하였구나 종들이 말하되 그러면 우리가 가서 이것을 뽑기를
@@ -165,7 +165,7 @@
 불사르게 단으로 묶고 곡식은 모아 내 곳간에 넣으라 하리라
 - 마태복음 13:26-30, 개역개정
 </pre>
-</div>
+
 
 <h2> 삶터에 임하는 하나님 나라 </h2>
 삶터에 하나님의 나라가 임한다는 것은 삶터에서 보다 종교적인 행위들, 예를들어, 예배의식,
@@ -177,19 +177,15 @@
 다스리시는 거룩한 영적인 영역과 내가 다스리며 조절 하던 일상의 영역이 다른 영역이
 아님을 인정하고 <u>성속(聖俗)의 벽을 허무는 것</u>입니다.
 </p>
-<script>endpage2("4em")</script>
 
-<script>startpage("")</script>
 예수님께서도 하나님 나라를 비유하실 때, 모두 우리의 일상, 삶터를 비유로 말씀하셨습니다.
 이것은 우리가 얼마든지 우리의 일상 가운데 하나님의 나라, 즉 하나님의 다스림과
 주권을 경험할 수 있음을 증명 합니다.
 
-<p>
-<center><img src="parables.png" width="80%"></center>
-</p>
+<br>
+<center><img src="parables.png" width="75%"></center>
 
 <h2> 소그룹 나눔 </h2>
-
 <ol class="fl">
 <li> 세속주의: 우리의 삶터에 깊이 들어와 있는 세속주의를 인식하고 있습니까? 나의
 가정 혹은 직장에 가장 큰 영향과 도전을 주는 세속주의적인 생각, 논리와 관행은 무엇입니까?
@@ -201,7 +197,6 @@
 신앙 생활을 구분하는 마음의 벽은 무엇입니까? 삶터의 모든 영역이 하나님의 말씀으로
 다스리심을 받기 위하여 당신이 변화되어야 할 삶의 목적과 방식은 무엇입니까?
 </ol>
-
-<span style="height:10em">&emsp;</span>
+<script>endpage()</script>
 </body>
 </html>
