--- a/l01/index.html
+++ b/l01/index.html
@@ -23,7 +23,7 @@
 마찬가지로 그리스도인들도 세상 속에서 일상을 살아가는 자신의
 삶터가 있습니다.
 
-<br><br>
+<br>
 당신의 삶터는 어디입니까? 당신은 그곳에서 어떤 모습으로 일상을 살아가고 있나요?
 누구를 만나 시간을 보내며, 어떤 마음, 어떤 모습으로 일상을 살아가고 있나요?
 </table>
@@ -36,16 +36,14 @@
     하나님께서는 온 세상을 선하게 창조하셨으며 (창세기1:1,  창세기 1:31, 디모데후서 4:4),
     자신의 형상대로 사람을 만드셔서 창조된 모든 세상을 주셔서 다스리게 하셨습니다.
 
-  <pre class="right">
-하나님이 이르시되 우리의 형상을 따라 우리의 모양대로
+  <pre class="right">하나님이 이르시되 우리의 형상을 따라 우리의 모양대로
 우리가 사람을 만들고 그들로 바다의 물고기와 하늘의
 새와 가축과 온 땅과 땅에 기는 모든 것을 다스리게 하자
 하시고, 하나님이 자기 형상 곧 하나님의 형상대로 사람을
-창조하시되 남자와 여자를 창조하시고
-하나님이 그들에게 복을 주시며 하나님이 그들에게 이르시되
-생육하고 번성하여 땅에 충만하라, 땅을 정복하라,
-바다의 물고기와 하늘의 새와 땅에 움직이는 모든 생물을
-다스리라 하시니라
+창조하시되 남자와 여자를 창조하시고 하나님이 그들에게
+복을 주시며 하나님이 그들에게 이르시되 생육하고
+번성하여 땅에 충만하라, 땅을 정복하라, 바다의 물고기와
+하늘의 새와 땅에 움직이는 모든 생물을 다스리라 하시니라
 창세기 1:18-21
   </pre>
 
@@ -69,7 +67,7 @@
 창세기 2:15
 </pre>
 </ol>
-<script>endpage2("0.5em")</script>
+<script>endpage()</script>
 
 <script>startpage("")</script>
 <ol class="fl" style="counter-reset: ol-item 3">
