--- a/l02/index.html
+++ b/l02/index.html
@@ -28,8 +28,9 @@
 모습은 세속주의(secularism)입니다 (창세기 11:4).
 
 <pre class="right">
-또 말하되 자, 성읍과 탑을 건설하여 그 탑 꼭대기를 하늘에 닿게 하여
-우리 이름을 내고 온 지면에 흩어짐을 면하자 하였더니
+또 말하되 자, 성읍과 탑을 건설하여 그 탑 꼭대기를 하늘에
+닿게 하여 우리 이름을 내고 온 지면에
+흩어짐을 면하자 하였더니
 - 창세기 11:4, 개역개정</pre>
 
 
